♻️chat lambda関数を2つに分離
* Setup Serverless project structure

* ✨dev deploy前追加

* ✨cleanup関数追加

* ♻️local環境構築系統の更新とdtoの修正

* ♻️定数追加

* ♻️スキーマ更新

* ♻️samconfig修正

* ♻️test code更新

* ♻️eslint更新

* ♻️テストコードリファクタ

* ♻️document更新

* ♻️document更新とnpm arc整理

* ♻️npm script更新

* ♻️import alias削除

* ♻️template.yaml修正

* ♻️template.yaml修正

* ♻️template.yaml修正

* ♻️ci/cd アーキテクチャ更新

* ♻️samconfig.toml 変更なし時でもdeploy可能に修正

* ♻️regionの修正

* ♻️samconfig.toml dev frontendUrl修正

* ♻️samconfig.toml dev frontendUrl修正

* ♻️dev frontendUrlを完全許容

* ♻️dev frontendUrl Default指定

* ♻️構文エラー修正

* ♻️プリフライトを許容するよう修正

* ♻️CORS設定緩和

* ♻️CORS設定柔軟対応

* ♻️table定義追加

* ♻️fileHash追加

* ♻️test codeとドキュメント修正

* ♻️table index更新

* ♻️state machine定義追加

* ♻️processor関数state machine limitによる更新

* ♻️file upload, delete limitの更新

* ♻️log統一と、cleanup関数の更新

* ♻️pinecone delete関数の修正

* ♻️SQSの実装

* ♻️test code修正

* ♻️template.prod.yaml インデント修正

* ♻️マージミス修正

* ♻️template.yaml SQS実装

* ♻️SQS scalingConfig追加

* ♻️サロゲートペア調整を追加

* ♻️state machine Expressに変更

* ♻️SQS同時処理数の追加

* ♻️サロゲートペア調整を更新

* ♻️サロゲートペア調整を更新

* ♻️text processing timeout処理を実装

* ♻️trigger関数 test code修正

* ♻️s3 trigger関数の処理を更新

* ♻️trigger関数 test code修正

* ♻️SMをSSMに変更

* ♻️pinecone key parameter name変更

* ♻️chat API response 構造の修正

* ♻️chat lambda関数を2つに分離

---------
